--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -42,6 +42,7 @@ jobs:
         pickhaxe:
         - ''
         - '@git:https://github.com/EliteMasterEric/PickHaxe#develop'
+        - '@git:https://github.com/EliteMasterEric/PickHaxe#efef477'
     env:
       pickhaxe: ${{(matrix.pickhaxe == '') && 'Release' || 'Develop'}}
     steps:
@@ -54,6 +55,7 @@ jobs:
         haxe-libs: |
           PickHaxe${{ matrix.pickhaxe }}
     - name: pickhaxe build && pickhaxe make
+      # cd ./${{matrix.sample}}
       run: |
         haxelib run pickhaxe build ${{matrix.mcloader}} ${{matrix.mcversion}}
         haxelib run pickhaxe make ${{matrix.mcloader}} ${{matrix.mcversion}}
