--- a/.github/workflows/build-samples.yml
+++ b/.github/workflows/build-samples.yml
@@ -24,7 +24,7 @@ jobs:
   # Perform a PickHaxe build and make.
   # The task should fail if Gradle fails.
   build:
-    name: Build ${{(matrix.pickhaxe == '') && 'Release' || 'Develop'}} (${{matrix.sample}} ${{matrix.mcloader}} ${{matrix.mcversion}})
+    name: ${{(matrix.pickhaxe == '') && 'Release' || 'Develop'}} (${{matrix.sample}} ${{matrix.mcloader}} ${{matrix.mcversion}})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -39,7 +39,11 @@ jobs:
         - fabric
         - forge
         mcversion:
+        - 1.19.4
         - 1.19.3
+        - 1.19.2
+        - 1.19.1
+        - 1.19.0
         pickhaxe:
         - ''
         - '@git:https://github.com/EliteMasterEric/PickHaxe#develop'
@@ -58,14 +62,17 @@ jobs:
       with:
         haxe-version: ${{ matrix.haxe }}
         haxe-libs: |
+          haxelib@git:https://github.com/HaxeFoundation/haxelib#development
           hxjava
           pickhaxe${{ matrix.pickhaxe }}
     - name: "Build: pickhaxe build && pickhaxe make"
+      # Using Mojang mappings because they're more up-to-date (they have fewer docs but we don't need them)
       run: |
         cd ./${{matrix.sample}}
-        haxelib run pickhaxe build ${{matrix.mcloader}} ${{matrix.mcversion}}
-        haxelib run pickhaxe make ${{matrix.mcloader}} ${{matrix.mcversion}}
+        haxelib run pickhaxe build ${{matrix.mcloader}} ${{matrix.mcversion}} --mappings mojang
+        haxelib run pickhaxe make ${{matrix.mcloader}} ${{matrix.mcversion}} --mappings mojang
     - name: "Cleanup: Upload Artifacts"
+      if: env.ACT != 'true' # https://github.com/nektos/act#skipping-steps
       uses: actions/upload-artifact@v3
       with:
         name: ${{matrix.sample}}-${{matrix.mcloader}}-${{matrix.mcversion}}_${{(matrix.pickhaxe == '') && 'release' || 'develop'}}
