--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -1,4 +1,4 @@
-name: Build Samples
+name: Build All
 on:
   workflow_dispatch: # We can run this workflow manually
     inputs:
@@ -54,25 +54,15 @@ jobs:
     steps:
     - name: "Setup: Git Checkout"
       uses: actions/checkout@v3
-    - name: "Setup: Java 17"
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'oracle'
-        java-version: '17'
-    - name: "Setup: Haxe ${{ matrix.haxe }} and PickHaxe (${{env.pickhaxe}})"
-      uses: vegardit/haxe-reusable-workflows/.github/actions/setup-haxe@v1
-      with:
-        haxe-version: ${{ matrix.haxe }}
-        haxe-libs: |
-          haxelib@git:https://github.com/HaxeFoundation/haxelib#development
-          hxjava
-          pickhaxe${{ matrix.pickhaxe }}
     - name: "Build: pickhaxe build && pickhaxe make"
-      # Using Mojang mappings because they're more up-to-date (they have fewer docs but we don't need them)
-      run: |
-        cd ./${{matrix.sample}}
-        haxelib run pickhaxe build ${{matrix.mcloader}} ${{matrix.mcversion}} --mappings mojang
-        haxelib run pickhaxe make ${{matrix.mcloader}} ${{matrix.mcversion}} --mappings mojang
+      uses: ./.github/actions/build-pickhaxe-sample
+      with:
+        os: ${{matrix.os}}
+        haxe: ${{matrix.haxe}}
+        sample: ${{matrix.sample}}
+        mcloader: ${{matrix.mcloader}}
+        mcversion: ${{matrix.mcversion}}
+        pickhaxe: ${{matrix.pickhaxe}}
     - name: "Cleanup: Upload Artifacts"
       if: env.ACT != 'true' # https://github.com/nektos/act#skipping-steps
       uses: actions/upload-artifact@v3
