--- a/.github/actions/build-pickhaxe-sample/action.yml
+++ b/.github/actions/build-pickhaxe-sample/action.yml
@@ -1,4 +1,5 @@
-name: PickHaxe - Build Project
+name: 'PickHaxe - Build Project'
+description: 'Runs "pickhaxe build" and "pickhaxe make"'
 
 inputs:
   os:
@@ -23,25 +24,27 @@ inputs:
     required: true
     default: '@git:https://github.com/EliteMasterEric/PickHaxe#develop' # Latest development version
 
-env:
-  pickhaxe: ${{(inputs.pickhaxe == '') && 'Release' || 'Develop'}}
-steps:
-  - name: "Setup: Java 17"
-    uses: actions/setup-java@v3
-    with:
-      distribution: 'oracle'
-      java-version: '17'
-  - name: "Setup: Haxe ${{ inputs.haxe }} and PickHaxe (${{env.pickhaxe}})"
-    uses: vegardit/haxe-reusable-workflows/.github/actions/setup-haxe@v1
-    with:
-      haxe-version: ${{ inputs.haxe }}
-      haxe-libs: |
-        haxelib@git:https://github.com/HaxeFoundation/haxelib#development
-        hxjava
-        pickhaxe${{ inputs.pickhaxe }}
-  - name: "Build: pickhaxe build && pickhaxe make"
-    # Using Mojang mappings because they're more up-to-date (they have fewer docs but we don't need them)
-    run: |
-      cd ./${{inputs.sample}}
-      haxelib run pickhaxe build ${{inputs.mcloader}} ${{inputs.mcversion}} --mappings mojang
-      haxelib run pickhaxe make ${{inputs.mcloader}} ${{inputs.mcversion}} --mappings mojang
+runs:
+  using: ${{inputs.os}}
+  env:
+    pickhaxe: ${{(inputs.pickhaxe == '') && 'Release' || 'Develop'}}
+  steps:
+    - name: "Setup: Java 17"
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'oracle'
+        java-version: '17'
+    - name: "Setup: Haxe ${{ inputs.haxe }} and PickHaxe (${{env.pickhaxe}})"
+      uses: vegardit/haxe-reusable-workflows/.github/actions/setup-haxe@v1
+      with:
+        haxe-version: ${{ inputs.haxe }}
+        haxe-libs: |
+          haxelib@git:https://github.com/HaxeFoundation/haxelib#development
+          hxjava
+          pickhaxe${{ inputs.pickhaxe }}
+    - name: "Build: pickhaxe build && pickhaxe make"
+      # Using Mojang mappings because they're more up-to-date (they have fewer docs but we don't need them)
+      run: |
+        cd ./${{inputs.sample}}
+        haxelib run pickhaxe build ${{inputs.mcloader}} ${{inputs.mcversion}} --mappings mojang
+        haxelib run pickhaxe make ${{inputs.mcloader}} ${{inputs.mcversion}} --mappings mojang
