--- a/.github/actions/build-pickhaxe-sample/action.yml
+++ b/.github/actions/build-pickhaxe-sample/action.yml
@@ -24,9 +24,6 @@ inputs:
     required: true
     default: '@git:https://github.com/EliteMasterEric/PickHaxe#develop' # Latest development version
 
-env:
-  pickhaxe: ${{(inputs.pickhaxe == '') && 'Release' || 'Develop'}}
-
 runs:
   using: "composite"
   steps:
@@ -35,7 +32,7 @@ runs:
       with:
         distribution: 'oracle'
         java-version: '17'
-    - name: "Setup: Haxe ${{ inputs.haxe }} and PickHaxe (${{env.pickhaxe}})"
+    - name: "Setup: Haxe ${{ inputs.haxe }} and PickHaxe (${{(inputs.pickhaxe == '') && 'Release' || 'Develop'}})"
       uses: vegardit/haxe-reusable-workflows/.github/actions/setup-haxe@v1
       with:
         haxe-version: ${{ inputs.haxe }}
@@ -45,6 +42,7 @@ runs:
           pickhaxe${{ inputs.pickhaxe }}
     - name: "Build: pickhaxe build && pickhaxe make"
       # Using Mojang mappings because they're more up-to-date (they have fewer docs but we don't need them)
+      shell: bash
       run: |
         cd ./${{inputs.sample}}
         haxelib run pickhaxe build ${{inputs.mcloader}} ${{inputs.mcversion}} --mappings mojang
