--- a/.github/actions/build-pickhaxe-sample/action.yml
+++ b/.github/actions/build-pickhaxe-sample/action.yml
@@ -27,6 +27,15 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: "Print Inputs"
+      shell: bash
+      run: |
+        echo "os: ${{inputs.os}}"
+        echo "haxe: ${{inputs.haxe}}"
+        echo "sample: ${{inputs.sample}}"
+        echo "mcloader: ${{inputs.mcloader}}"
+        echo "mcversion: ${{inputs.mcversion}}"
+        echo "pickhaxe: ${{inputs.pickhaxe}}"
     - name: "Setup: Java 17"
       uses: actions/setup-java@v3
       with:
