--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -74,7 +74,7 @@ jobs:
       uses: RubbaBoy/BYOB@v1.3.0
       with:
         NAME: build-${{matrix.sample}}-${{matrix.mcloader}}-${{matric.mcversion}}_${{(matrix.pickhaxe == '') && 'release' || 'develop'}}
-        LABEL: ${{matrix.mcloader}} v${{matric.mcversion}}
+        LABEL: ${{matrix.mcloader}} v${{matrix.mcversion}}
         ICON: 'github'
         STATUS: ${{ success() && 'passing' || 'failing' }}
         COLOR: ${{ success() && 'green' || 'red' }}
