--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -73,7 +73,7 @@ jobs:
       if: always()
       uses: RubbaBoy/BYOB@v1.3.0
       with:
-        NAME: build-${{matrix.sample}}-${{matrix.mcloader}}-${{matric.mcversion}}_${{(matrix.pickhaxe == '') && 'release' || 'develop'}}
+        NAME: build-${{matrix.sample}}-${{matrix.mcloader}}-${{matrix.mcversion}}_${{(matrix.pickhaxe == '') && 'release' || 'develop'}}
         LABEL: ${{matrix.mcloader}} v${{matrix.mcversion}}
         ICON: 'github'
         STATUS: ${{ success() && 'passing' || 'failing' }}
