Add Haxe path to terminal PATH env via settings.json

--- a/madeinhaxe/.vscode/settings.json
+++ b/madeinhaxe/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
+    "terminal.integrated.env.windows": {
+        "PATH": "C:\\Haxe\\Haxe500-5467ab8\\haxe;${env:PATH}"
+    },
     "haxe.configurations": [
         ["generated/build.hxml"]
-    ]
+    ],
 }
