--- a/madeinhaxe/.vscode/settings.json
+++ b/madeinhaxe/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
     "terminal.integrated.env.windows": {
-        "PATH": "C:\\Haxe\\Haxe500-f5fcc45\\haxe;${env:PATH}"
+      "PATH": "C:\\Haxe\\Haxe500-bdd7bf4\\haxe;${env:PATH}"
     },
-    "haxe.configurations": [
-        ["generated/build.hxml"]
-    ]
-}
+    "haxe.configurations": [["generated/build.hxml"]]
+  }
+  
