--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -91,7 +91,7 @@ jobs:
     steps:
     - name: "Setup: Git Checkout"
       uses: actions/checkout@v3
-    - name: "Build: pickhaxe build && pickhaxe make"
+    - name: "Build: pickhaxe build"
       uses: ./.github/actions/build-pickhaxe-sample
       with:
         os: ${{matrix.os}}
