Personal config for terminal env, remove this later.

--- a/madeinhaxe/.vscode/settings.json
+++ b/madeinhaxe/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "terminal.integrated.env.windows": {
-      "PATH": "C:\\Haxe\\Haxe500-bdd7bf4\\haxe;${env:PATH}"
-    },
-    "haxe.configurations": [["generated/build.hxml"]]
-  }
-  
+  "terminal.integrated.env.windows": {
+    "PATH": "C:\\Haxe\\Haxe500-bdd7bf4\\haxe;${env:PATH}"
+  },
+  "terminal.integrated.env.linux": {
+    "PATH": "/home/eric/Documents/Programming/Haxe/_Install/haxe_20240107093041_29085f8/:${env:PATH}"
+  },
+  "haxe.configurations": [["generated/build.hxml"]]
+}
