--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -31,61 +31,19 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        sample:
-        - madeinhaxe
-        - obsidianarmor
-        mcloader:
-        - fabric
-        - forge
-        mcversion:
-        - latest-snapshot
-        - latest
-        - 1.20.2
-        - 1.20.1
-        - '1.20' # 1.20.0
-        - 1.19.4
-        - 1.19.3
-        - 1.19.2
-        - 1.19.1
-        - 1.19 # 1.19.0
-        - 1.18.2
-        - 1.18.1
-        - 1.18 # 1.18.0
-        - 1.17.1
-        - 1.17 # 1.17.0
-        - 1.16.5
-        - 1.16.4
-        - 1.16.3
-        - 1.16.2
-        - 1.16.1
-        - 1.16 # 1.16.0
+        include:
+          - sample: madeinhaxe/fabric-1.19.4
+            mcloader: fabric
+            mcversion: 1.19.4
+          - sample: madeinhaxe/fabric-1.20.6
+            mcloader: fabric
+            mcversion: 1.20.6
+          - sample: madeinhaxe/forge-1.19.4
+            mcloader: forge
+            mcversion: 1.19.4
         pickhaxe:
         - 'haxelib' # Current HaxeLib version
         - 'git' # Latest development version
-        exclude:
-        - mcversion: latest-snapshot # Forge does not target snapshots, Fabric does.
-          mcloader: forge
-        - mcversion: 1.17 # Forge 1.17.0 doesn't exist
-          mcloader: forge
-        - mcversion: 1.16 # Forge 1.16.0 doesn't exist
-          mcloader: forge
-        # Disable Forge below 1.18
-        - mcversion: 1.17.1
-          mcloader: forge
-        - mcversion: 1.17
-          mcloader: forge
-        - mcversion: 1.16.5
-          mcloader: forge
-        - mcversion: 1.16.4
-          mcloader: forge
-        - mcversion: 1.16.3
-          mcloader: forge
-        - mcversion: 1.16.2
-          mcloader: forge
-        - mcversion: 1.16.1
-          mcloader: forge
-        - mcversion: 1.16
-          mcloader: forge
     env:
       pickhaxe: ${{(matrix.pickhaxe == 'haxelib') && 'Release' || 'Develop'}}
     steps:
